Attempt to fix taps on mobile

--- a/react-ui/src/theme.css
+++ b/react-ui/src/theme.css
@@ -2,6 +2,10 @@
  * Customize Milligram
  **/
 
+a, button {
+  cursor: pointer;
+}
+
 .row {
   max-width: 85rem;
 }
